--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moleculer-lambda-gateway",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Mixin for lambda aws",
   "main": "index.js",
   "scripts": {
@@ -49,15 +49,6 @@
   },
   "dependencies": {
     "babel-plugin-transform-define": "^1.3.0",
-    "express": "^4.16.3",
-    "get-routes": "^0.2.0",
-    "ncp": "^2.0.0",
-    "next": "^6.0.4-canary.8",
-    "path": "^0.12.7",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "webpack": "^4.6.0",
-    "webpack-dev-middleware": "^3.1.2",
-    "webpack-hot-middleware": "^2.22.1"
+    "bluebird": "^3.5.2"
   }
 }
