--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "moleculer-lambda-gateway",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "Mixin for lambda aws",
   "main": "index.js",
   "scripts": {
+    "pre-test": "npm dedupe && npm prune && npm install",
     "dev": "nodemon examples/index.js",
     "ci": "jest --watch",
     "lint": "eslint --ext=.js src test",
@@ -29,7 +30,7 @@
     "benchmarkify": "2.1.0",
     "coveralls": "3.0.0",
     "eslint": "4.8.0",
-    "jest": "20.0.4",
+    "jest": "^20.0.4",
     "jest-cli": "20.0.4",
     "lolex": "^2.1.3",
     "moleculer": "0.11.1",
@@ -49,6 +50,7 @@
   },
   "dependencies": {
     "babel-plugin-transform-define": "^1.3.0",
-    "bluebird": "^3.5.2"
+    "bluebird": "^3.5.2",
+    "lodash": "^4.17.11"
   }
 }
